--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/hunggtham/lms_system",
+  "homepage": "https://hunggtham.github.io/lms_system/",
   "name": "lms_system",
   "private": true,
   "version": "0.0.0",
